updated gradle to remove warnings.

--- a/tools/validator/build.gradle
+++ b/tools/validator/build.gradle
@@ -10,13 +10,13 @@ repositories {
     gradlePluginPortal()
 
     maven {
-        url "https://nexus.library.smartgridready.ch/repository/maven-releases/"
+        url = "https://nexus.library.smartgridready.ch/repository/maven-releases/"
         mavenContent {
             releasesOnly()
         }
     }
     maven {
-        url "https://nexus.library.smartgridready.ch/repository/maven-snapshots/"
+        url = "https://nexus.library.smartgridready.ch/repository/maven-snapshots/"
         mavenContent {
             snapshotsOnly()
         }
@@ -25,7 +25,9 @@ repositories {
 
 def xsdPath = "../../SchemaDatabase/SGr"
 
-mainClassName = 'validator.CheckDeviceStructure'
+application {
+    mainClass.set('validator.CheckDeviceStructure')
+}
 
 java {
     sourceCompatibility = "${jdkVersion}"
